--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700'
-          rel='stylesheet' type='text/css'>
-    <link rel="stylesheet"
-          href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <!--<link rel=stylesheet type=text/css-->
-          <!--href="{{ url_for('static', filename='styles.css') }}">-->
-</head>
-<body>
-<div class="container">
-    <!--{% block content %}-->
-    <!--{% endblock %}-->
+{% extends "base.html" %}
+{% block content %}
 
-    <h1>Hello World!</h1>
-    {{ item.user.name }}
+<h2>{{ user.name }}</h2>
+<img src="{{ user.picture }}" alt="user_photo">
 
-</div>
-</body>
-</html>
+
+
+
+{% endblock %}
+
+
