--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -1,68 +1,61 @@
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Item Catalog</title>
-    <meta name="google-signin-scope" content="profile email">
-    <meta name="google-signin-client_id"
-          content="458401153152-22gtge8j5ajft96euj2ubkk1vdtmr6sk.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <link rel="stylesheet" type="text/css" href="../static/css/foundation.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/app.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Item Catalog</title>
+  <link rel="stylesheet" type="text/css" href="../static/css/foundation.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/app.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
 
 
 </head>
+
 <body>
 
 <div class="top-bar">
-    <div class="wrapper">
-        <div class="top-bar-title">
-            <span data-responsive-toggle="responsive-menu"
-                  data-hide-for="medium">
-                <button class="menu-icon dark" type="button"
-                        data-toggle></button>
-             </span>
-            <strong class="logo">Item Catalog</strong>
-        </div>
-        <div id="responsive-menu">
-            <div class="top-bar-right">
-                <ul class="menu">
-                    <li>
-                        <a data-toggle="animatedModal10"
-                           class="button">Login</a>
-                        <div class="reveal" id="animatedModal10" data-reveal
-                             data-close-on-click="true"
-                             data-animation-in="slide-in-down"
-                             data-animation-out="slide-out-down">
-                            <h1>Login Options:</h1>
-                            <div class="g-signin2" data-onsuccess="onSignIn"
-                                 data-theme="dark" data-close
-                                 aria-label="Close reveal"></div>
-                            <script>
-            ß                    function onSignIn(googleUser) {
-                                    var id_token = googleUser.getAuthResponse().id_token;
-                                };
-                            </script>
-                            <button class="close-button" data-close
-                                    aria-label="Close reveal"
-                                    type="button">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
+  <div class="wrapper">
+    <div class="top-bar-title">
+        <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
+          <button class="menu-icon dark" type="button" data-toggle></button>
+        </span>
+      <strong class="logo">Item Catalog</strong>
     </div>
+    <div id="responsive-menu">
+      <div class="top-bar-right">
+        <ul class="menu">
+          <li>
+            <a data-toggle="animatedModal10" class="button">Login</a>
+            <div class="reveal" id="animatedModal10" data-reveal
+                 data-animation-in="hinge-in-from-top"
+                 data-animation-out="slide-out-down">
+              <h1>Login Options:</h1>
+              <div class="large-6 large-centered columns">
+                <div class="button-group even-3">
+                  <a href="login/google" class="button">Google</a>
+                  <a href="login/fb" class="button">Facebook</a>
+                  <a href="login/tw" class="button">Twitter</a>
+                </div>
+              </div>
+              <button class="close-button" data-close aria-label="Close reveal"
+                      type="button">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
 
 
 <div class="wrapper">
-    {% block content %}
-    {% endblock %}
+  {% block content %}
+
+  {% endblock %}
 </div>
 
 <script src="../static/js/vendor/jquery.js"></script>
@@ -70,4 +63,5 @@
 <script src="../static/js/vendor/foundation.js"></script>
 <script src="../static/js/app.js"></script>
 </body>
+
 </html>
