--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
+{% block title %}Home Page{% endblock %}
+
 {% block content %}
 
-<h3>{{ user.name }}</h3>
-<img src="{{ user.picture }}" alt="user_photo">
-
+<h1>Index Page</h1>
 
 
 
