--- a/catalog/templates/login.html
+++ b/catalog/templates/login.html
@@ -34,10 +34,10 @@
                     success: function (result) {
                         // Handle or verify the server response if necessary.
                         if (result) {
-                            $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...')
+                            $('#result')
                             setTimeout(function () {
                                 window.location.href = "/index";
-                            }, 4000);
+                            }, 100);
                         } else if (authResult['error']) {
                             console.log('There was an error: ' + authResult['error']);
                         } else {
@@ -49,7 +49,6 @@
         }
     </script>
     <!--END GOOGLE PLUS SIGN IN -->
-  {{ STATE }}
   </div>
 
 
