--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -5,8 +5,10 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="../static/css/foundation.css">
-  <link rel="stylesheet" href="../static/css/styles.css">
+  <link rel=stylesheet type=text/css href="{{ url_for('static',
+  filename='css/foundation.css') }}">
+  <link rel=stylesheet type=text/css href="{{ url_for('static',
+  filename='css/styles.css') }}">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script src="//apis.google.com/js/platform.js?onload=start"></script>
 </head>
@@ -30,7 +32,7 @@
               {% if 'username' not in session %}
                 <a href="{{ url_for('showLogin') }}" class="button">Login</a>
               {% else %}
-                <a href="{{ url_for('gdisconnect') }}" class="button
+                <a href="{{ url_for('disconnect') }}" class="button
               alert">Logout {{ user_name }}
                 </a> <img src="{{ picture }}" alt="profile-pic" height="40"
                           width="40" style="border-radius: 25px; margin-left:
