--- a/catalog/templates/deleteCategory.html
+++ b/catalog/templates/deleteCategory.html
@@ -10,6 +10,8 @@
       </div>
     </div>
 
+    <div class="row">
+    <div class="medium-6 columns">
     <form action="#" method="post">
       <div class="row">
         <div class="medium-6 columns">
@@ -20,6 +22,8 @@
         </div>
       </div>
     </form>
+  </div>
+    </div>
   </div>
 
 {% endblock %}
