--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -3,46 +3,36 @@
 
 {% block content %}
 
-  <h1>Index Page</h1>
+  <div class="row">
+    <div class="large-12 columns">
 
-  <a href="{{ url_for('new_category') }}" class="button">Create Category</a>
+      <a href="{{ url_for('new_category') }}" class="button">Create
+                                                             Category</a>
+    </div>
+  </div>
 
+  <div class="row">
+    <div class="large-6 columns">
+      <h2>Categories:</h2>
+      {% for c in categories %}
+        <h3>
+          <a href="{{ url_for('category_index', category_name = c.name) }}">
+            {{ c.name }}</a>
+        </h3>
+      {% endfor %}
+    </div>
 
-  {% for c in categories %}
-    <h3>
-    <a href="{{ url_for('category_index', category_name = c.name)}}">
-      {{ c.name }}</a>
-
-
-
-
-{#      <a href="{{ url_for('new_item', category_id = c.id ) }}">{{ c.name#}
-{#              }}</a>#}
-{#      {% if c.user.name == user_name %}#}
-{#        <br>#}
-{#        <a href="{{ url_for('edit_category', category_id = c.id) }}"#}
-{#           class="button tiny">Edit</a>#}
-{#      {% endif %}#}
-    </h3>
-  {% endfor %}
-  <br>
-  <br>
-  <br>
-  <br><br>
-  <br><br>
-  <br><br>
-  <br><br>
-  <br><br>
-  <br><br>
-  <br>
-
-  {% for i in items %}
-    <h5>
-      {{ i.name }}
-    </h5>
-  {% endfor %}
+    <div class="large-6 columns">
+      <h2 style="padding-top: 7px">Recent Items:</h2>
+      {% for i in items %}
+        <h4>
+          <a href="{{ url_for('item_description',
+          item_name = i.name, category_name = i.category.name) }}">
+            {{ i.name }}</a>
+          <span style="font-style: italic; font-size: medium">({{ i.category.name }})</span>
+        </h4>
+      {% endfor %}
+    </div>
+  </div>
 
 {% endblock %}
-
-
-
