--- a/catalog/templates/newCategory.html
+++ b/catalog/templates/newCategory.html
@@ -3,7 +3,12 @@
 
 {% block content %}
 
-  <h1>Add New Category</h1>
+  <div class="row">
+    <div class="medium-6 columns">
+      <h1>Add New Category</h1>
+    </div>
+  </div>
+
 
   <form action="#" method="post">
     <div class="row">
