--- a/catalog/templates/editCategory.html
+++ b/catalog/templates/editCategory.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="medium-6 columns">
         <label for="name">Name:
-          <input type="text" placeholder="{{ category.name }}"
+          <input type="text" value="{{ category.name }}"
                  name="category_name">
         </label>
       </div>
